[package]
name = "file-combiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7.0"
num_cpus = "1.15.0"

[profile.release]
opt-level = "z"
debug = false
codegen-units = 16
lto = true
incremental = true
panic = "abort"